tests/snapshots/examples_fixtures/functions__function_redeclaration_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/functions/function_redeclaration_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E001]: Duplicate Name

Duplicate binding: `my_func` is already defined.

  examples/functions/function_redeclaration_error.flx:6:1
  |
6 | fn my_func() {
  | ^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  examples/functions/function_redeclaration_error.flx:2:1
  |
2 | fn my_func() {
  | ^^^^^^^^^^^^
== stdout ==
<not executed>
