tests/snapshots/examples_fixtures/functions__function_redeclaration_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/functions/function_redeclaration_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
