tests/snapshots/examples_fixtures/functions__immutability_invalid.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/functions/immutability_invalid.flx
== compile ==
failed (compile)
== diagnostics ==
Error[E002]: Immutable Binding

Cannot reassign to immutable variable `a`.

  examples/functions/immutability_invalid.flx:3:1
  |
3 | a = 10;
  | ^^^^^^^

Hint:
  In Flux, bindings are immutable. Compute a new value with a new binding name (for example: `let next_a = ...`).
== stdout ==
<not executed>
